# pong-ping

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: release-linux.yml  release.yml
scripts/: bump-version.sh
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 1_init.sql  2_add_doubles.sql  3_key_bindings.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs
src/components/: Dashboard.jsx  GameModeCarousel.tsx  GameSelect.tsx  HallOfFame.jsx  KeyBindingsSettings.tsx  LoadingScreen.jsx  Navbar.jsx  PlayerManagement.tsx  PlayerProfile.tsx  Settings.tsx  UpdateDialog.jsx
src/components/GameScreen/: GameScreen.config.tsx  GameScreen.tsx
src/components/MatchSetup/: MatchSetup.tsx  index.ts
src/components/react-bits/: Balatro.tsx  CountUp.tsx  Counter.tsx  DecryptedText.tsx
src/components/ui/: dialog.jsx
src/contexts/: KeyBindingsContext.tsx  SettingsContext.tsx
src/hooks/: useAction.ts  useSpatialNav.ts
src/lib/: gameConfig.ts
src/services/: gameModeService.js  keyBindingService.ts  matchService.js  userService.js
